--- a/webserver_config.json
+++ b/webserver_config.json
@@ -1,5 +1,5 @@
 {
   "config_file_path": "D:\\Projects\\DSA\\data.txt",
-  "default_language": "python",
-  "vscode_path": "code"
+  "default_language": "cpp",
+  "editor_path": "C:\\Users\\Nishan Paudel\\AppData\\Local\\Programs\\Microsoft VS Code\\Code.exe"
 }
